# fastapi-dummy

./: Dockerfile  Makefile  README.md  pyproject.toml
tests/: test_main.py
