[tool.poetry]
name = "fastapi-dummy"
version = "0.1.0"
description = ""
authors = ["Grégoire Deveaux <ggdx@laposte.net>"]
readme = "README.md"
packages = [{include = "fastapi_dummy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
